<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="394dp"
        android:layout_height="200dp"
        app:fillColor="#E01C25"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp" />

    <TableLayout
        android:id="@+id/panel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/panel_clean">
        <TableLayout>
        <TableRow
            android:id="@+id/row1"
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="0dp">
            <Space
                android:layout_width="15dp"
                android:layout_height="100dp" />
            <TextView
                android:id="@+id/textView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:drawableTop="@mipmap/circle_1"
                android:fontFamily="monospace"
                android:text="@string/indi_finan"
                android:textAlignment="center"
                android:textColor="#204180"
                android:textSize="12sp" />
            <Space
                android:layout_width="20dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:drawableTop="@mipmap/circle_2"
                android:fontFamily="monospace"
                android:text="@string/of_y_caj"
                android:textAlignment="center"
                android:textColor="#204180"
                android:textSize="12sp" />
            <Space
                android:layout_width="20dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:drawableTop="@mipmap/circle_3"
                android:fontFamily="monospace"
                android:text="@string/atenci_n_al_cliente"
                android:textAlignment="center"
                android:textColor="#204180"
                android:textSize="12sp" />

        </TableRow>
    </TableLayout>
    <TableLayout>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="0dp">

            <Space
                android:layout_width="15dp"
                android:layout_height="100dp" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:drawableTop="@mipmap/circle_4"
                android:fontFamily="monospace"
                android:text="@string/beneficios_bcr_tarjetas"
                android:textAlignment="center"
                android:textColor="#204180"
                android:textSize="12sp" />
            <Space
                android:layout_width="20dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:drawableTop="@mipmap/circle_5"
                android:fontFamily="monospace"
                android:text="@string/solicitudes_en_l_nea"
                android:textAlignment="center"
                android:textColor="#204180"
                android:textSize="12sp" />

            <Space
                android:layout_width="20dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:drawableTop="@mipmap/circle_6"
                android:fontFamily="monospace"
                android:text="@string/iniciar_sesi_n"
                android:textAlignment="center"
                android:textColor="#204180"
                android:textSize="12sp" />
        </TableRow>
        <Space
            android:layout_width="150dp"
            android:layout_height="30dp" />
    </TableLayout>
    <TableLayout>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="551dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="70dp">

            <Space
                android:layout_width="30dp"
                android:layout_height="40dp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:baselineAligned="false"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/do_lar"></ImageView>

            <Space
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/euro_disabled" />

            <Space
                android:layout_width="32dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:text="@string/change_rate"
                android:textAlignment="inherit"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#204180"
                android:textSize="10sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </TableRow>
    </TableLayout>
        <TableLayout>
        <TableRow
            android:id="@+id/row4"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content">

            <Space
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/logo"></ImageView>
        </TableRow>
    </TableLayout>

    </TableLayout>
</LinearLayout>